# panhandle

./: .gitignore  PanHandle.cabal  PanHandler.lhs  README  README.md  cabal.project  default.nix  nixpkgs.nix  panhandle.cabal  panhandle.hs  panhandler.hs  release.nix  shell.nix  test-real.hs  test.hs  test.sh
panhandle/: Main.hs
src/: Main.hs  PanHandle.hs  PanHandler.lhs
tests/: Generators.hs  LSC.hs  Main.hs
