name:                panhandle
version:             0.4.0.1
synopsis:            Pandoc filter to unwrap nested blocks
description:         Pandoc filter to splice together nested documents
homepage:            http://chriswarbo.net/projects/activecode
license:             PublicDomain
license-file:        LICENSE
author:              Chris Warburton
maintainer:          chriswarbo@gmail.com
category:            Text
build-type:          Simple
extra-source-files:  README.md, test.sh
cabal-version:       >=1.10

source-repository head
  type:     git
  location: http://chriswarbo.net/git/panhandle.git

library
  hs-source-dirs:      src
  exposed-modules:     PanHandle
  default-language:    Haskell2010
  build-depends:       base   >= 4.7
                     , pandoc >= 2.9
                     , pandoc-types == 1.20.*
                     , syb >= 0.7
                     , text >= 1.2

executable panhandle
  main-is:             Main.hs
  build-depends:       base >=4.7
                     , panhandle
  hs-source-dirs:      panhandle
  default-language:    Haskell2010

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       LSC, Generators
  build-depends:       base       >= 4.7
                     , aeson >= 1.4
                     , bytestring >= 0.10
                     , containers >= 0.6
                     , derive >= 2.6
                     , pandoc >= 2.9
                     , pandoc-types == 1.20.*
                     , panhandle
                     , QuickCheck >= 2.13
                     , syb >= 0.7
                     , tagged >= 0.8
                     , tasty      >= 1.2
                     , tasty-quickcheck >= 0.10
                     , text >= 1.2
